Prepared conversation management, UI updates

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -121,10 +121,12 @@ tatami.user.new.password.confirmation.error=The new password confirmation is inc
 
 tatami.user.profile.show=Show profile of
 tatami.user.status.show=Show status
+tatami.user.status.reply=Reply
+tatami.user.status.share=Share
 tatami.user.status.favorite=Favorite
 tatami.user.status.delete=Delete
 
 tatami.timeline.refresh=Refresh
 tatami.timeline.next=More
 
-tatami.user.status.confirm.delete=Delete status ?
+tatami.user.status.confirm.delete=Are you sure you want to delete the status ?
