--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -121,10 +121,12 @@ tatami.user.new.password.confirmation=Confirmation du mot de passe
 
 tatami.user.profile.show=Profil de
 tatami.user.status.show=Voir le status
-tatami.user.status.favorite=Mettre en favoris
+tatami.user.status.reply=Répondre
+tatami.user.status.share=Partager
+tatami.user.status.favorite=Mettre en favori
 tatami.user.status.delete=Supprimer
 
 tatami.timeline.refresh=Rafraîchir
 tatami.timeline.next=Plus
 
-tatami.user.status.confirm.delete=Supprimer status ?
+tatami.user.status.confirm.delete=Etes-vous certain de vouloir supprimer le status ?
