Polishing discussions UI

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -56,6 +56,8 @@ tatami.presentation.moreinfo=More information on our Github page :
 tatami.status=Status
 tatami.status.update=Update your status
 tatami.status.update.to=Send a status update
+tatami.status.reply=Reply to this status
+tatami.status.reply.action=Reply
 tatami.user.favoritestatus=Favorites
 tatami.tags=Tags
 tatami.search=Search
@@ -70,12 +72,6 @@ tatami.follow.nobody=No new user to follow today.
 
 tatami.new.status=Update
 tatami.timeline=Timeline
-tatami.more=More
-tatami.update.profile.mobile=Update Profile
-tatami.favorites.mobile=Favorites
-tatami.userline.mobile=Userline
-tatami.tagline.mobile=Tagline
-tatami.user.suggestions.mobile=Users Suggestions
 
 tatami.user.picture=Picture
 tatami.user.picture.legend=To update your picture, go to
