--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -56,6 +56,8 @@ tatami.presentation.moreinfo=Plus d'informations sur notre page Github :
 tatami.status=Statut
 tatami.status.update=Mettre à jour votre statut
 tatami.status.update.to=Envoyer une mise à jour du statut
+tatami.status.reply=Répondre à ce statut
+tatami.status.reply.action=Répondre
 tatami.user.favoritestatus=Favoris
 tatami.tags=Tags
 tatami.search=Recherche
@@ -70,12 +72,6 @@ tatami.follow.nobody=Personne à suivre aujourd'hui.
 
 tatami.new.status=Nouveau
 tatami.timeline=Timeline
-tatami.more=Plus
-tatami.update.profile.mobile=Profil
-tatami.favorites.mobile=Favoris
-tatami.userline.mobile=Userline
-tatami.tagline.mobile=Tagline
-tatami.user.suggestions.mobile=Suggestions
 
 tatami.user.picture=Photo
 tatami.user.picture.legend=Pour mettre à jour votre photo, connectez-vous sur
