--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -117,6 +117,7 @@ tatami.user.new.password.confirmation=Confirmation du mot de passe
 
 tatami.user.profile.show=Profil de
 tatami.user.status.show=Voir le status
+tatami.user.status.details=Détails
 tatami.user.status.reply=Répondre
 tatami.user.status.share=Partager
 tatami.user.status.favorite=Mettre en favori
