--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -117,6 +117,7 @@ tatami.user.new.password.confirmation.error=The new password confirmation is inc
 
 tatami.user.profile.show=Show profile of
 tatami.user.status.show=Show status
+tatami.user.status.details=Details
 tatami.user.status.reply=Reply
 tatami.user.status.share=Share
 tatami.user.status.favorite=Favorite
