--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -122,6 +122,7 @@ tatami.user.status.reply=Reply
 tatami.user.status.share=Share
 tatami.user.status.favorite=Favorite
 tatami.user.status.delete=Delete
+tatami.user.status.shared.by=Shared by
 
 tatami.timeline.refresh=Refresh
 tatami.timeline.next=More
