Added text on status actions

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -116,7 +116,7 @@ tatami.user.new.password.confirmation=New password confirmation
 tatami.user.new.password.confirmation.error=The new password confirmation is incorrect
 
 tatami.user.profile.show=Show profile of
-tatami.user.status.show=Show status
+tatami.user.status.show=View
 tatami.user.status.details=Details
 tatami.user.status.reply=Reply
 tatami.user.status.share=Share
