--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -116,11 +116,11 @@ tatami.user.new.password.confirmation.error=La confirmation du nouveau mot de pa
 tatami.user.new.password.confirmation=Confirmation du mot de passe
 
 tatami.user.profile.show=Profil de
-tatami.user.status.show=Voir le status
+tatami.user.status.show=Voir
 tatami.user.status.details=Détails
 tatami.user.status.reply=Répondre
 tatami.user.status.share=Partager
-tatami.user.status.favorite=Mettre en favori
+tatami.user.status.favorite=Favori
 tatami.user.status.delete=Supprimer
 tatami.user.status.shared.by=Partagé par
 
