--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -122,6 +122,7 @@ tatami.user.status.reply=Répondre
 tatami.user.status.share=Partager
 tatami.user.status.favorite=Favori
 tatami.user.status.delete=Supprimer
+tatami.user.status.replyto=En réponse à
 tatami.user.status.shared.by=Partagé par
 
 tatami.timeline.refresh=Rafraîchir
