Added a presentation page

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -32,7 +32,7 @@ tatami.register.validation.error=You e-mail could not be validated. Please use t
 tatami.register.validation.ok=Your e-mail has been validated. Your password will be e-mailed to you.
 tatami.register.home=Go to the home page
 
-tatami.lost.password.title=You have forgotten your password?
+tatami.lost.password.title=Have you forgotten your password?
 tatami.lost.password.button=Ask for a new password
 tatami.lost.password.msg=An e-mail has been sent to you, with instructions to generate a new password.
 tatami.lost.password.msg.error=This e-mail address is not registered in Tatami.
@@ -52,7 +52,7 @@ tatami.license.text=Licensed under the Apache License, Version 2.0 (the "License
 tatami.license=Source Code License
 tatami.presentation=Presentation
 tatami.presentation.text=Tatami is an enterprise micro-blogging platform.
-tatami.presentation.moreinfo=More information on our Github page : 
+tatami.presentation.moreinfo=See a detailled presentation of Tatami 
 tatami.status=Status
 tatami.status.update=Update your status
 tatami.status.update.to=Send a status update
@@ -129,3 +129,35 @@ tatami.timeline.refresh=Refresh
 tatami.timeline.next=More
 
 tatami.user.status.confirm.delete=Are you sure you want to delete the status ?
+
+tatami.presentation.title=What is Tatami?
+
+tatami.presentation.row1.title=A private, enterprise micro-blogging solution
+tatami.presentation.row1.1=Update your status to inform your co-workers
+tatami.presentation.row1.2=Subscribe to other employees' time lines
+tatami.presentation.row1.3=Share important information to your followers
+tatami.presentation.row1.4=Discuss and reply to your colleagues
+tatami.presentation.row1.5=Put important information into favorites
+tatami.presentation.row1.6=Search useful information with our integrated search engine
+tatami.presentation.row1.7=Use hashtags to find related information
+tatami.presentation.row1.8=Go to your co-workers' profiles to see what they are working on
+tatami.presentation.row1.9=English and French versions available, adding other languages is easy
+
+tatami.presentation.row2.title=Works on all devices !
+tatami.presentation.row2.1=Dynamic Web application (HTML5) : nothing to install, excepted a modern browser!
+tatami.presentation.row2.2=Works on mobiles, tablets, or old-fashion computers : the application adapts itself automatically to your device's screen
+tatami.presentation.row2.3=Stay connected with your enterprise wherever you are
+
+tatami.presentation.row3.title=Easy installation and integration with your company's IT infrastructure
+tatami.presentation.row3.1=Standard Java application
+tatami.presentation.row3.2=Your data belongs to you, not to your SaaS vendor !
+tatami.presentation.row3.3=Integrates with your LDAP directory
+tatami.presentation.row3.4=Integrates with Google Apps
+tatami.presentation.row3.5=Fully Open Source : easy to extend or modify according to your needs
+tatami.presentation.row3.6=High performance, even on small hardware
+tatami.presentation.row3.7=Join the project and submit patches on our Github page: 
+
+tatami.presentation.row4.title=Also available in SaaS mode, fully managed by Ippon Technologies
+tatami.presentation.row4.1=If you do not want to install Tatami in your company, it's easy to use directly
+tatami.presentation.row4.2=Secured multi-enterprise mode : every company has its own private space
+
