--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -52,7 +52,7 @@ tatami.license.text=Licensed under the Apache License, Version 2.0 (the "License
 tatami.license=Licence du code source
 tatami.presentation=Présentation
 tatami.presentation.text=Tatami est un réseau social de micro-blogging, utilisable en interne dans votre entreprise.
-tatami.presentation.moreinfo=Plus d'informations sur notre page Github : 
+tatami.presentation.moreinfo=Voir une présentation détaillée de Tatami 
 tatami.status=Statut
 tatami.status.update=Mettre à jour votre statut
 tatami.status.update.to=Envoyer une mise à jour du statut
@@ -129,3 +129,34 @@ tatami.timeline.refresh=Rafraîchir
 tatami.timeline.next=Plus
 
 tatami.user.status.confirm.delete=Etes-vous certain de vouloir supprimer le status ?
+
+tatami.presentation.title=Qu'est-ce que Tatami ?
+
+tatami.presentation.row1.title=Une solution de micro-blogging privée, spécifique à votre entreprise
+tatami.presentation.row1.1=Mettez à jour votre statut pour que vos collègues soient informés
+tatami.presentation.row1.2=Abonnez-vous aux fils d'informations de vos collègues
+tatami.presentation.row1.3=Renvoyez les informations importantes aux personnes qui vous suivent
+tatami.presentation.row1.4=Discutez et répondez à vos collègues
+tatami.presentation.row1.5=Mettez en favori les informations essentielles
+tatami.presentation.row1.6=Recherchez l'information utile grâce à notre moteur de recherche intégré
+tatami.presentation.row1.7=Utilisez des hashtags pour découvrir des informations connexes
+tatami.presentation.row1.8=Allez sur les profils de vos collègues pour voir ce sur quoi ils travaillent
+tatami.presentation.row1.9=Versions Française et Anglaise disponibles, de nouvelles langues sont simples à ajouter
+
+tatami.presentation.row2.title=Fonctionne partout !
+tatami.presentation.row2.1=Application Web entièrement dynamique (HTML5) : rien à installer, à part un navigateur Web moderne !
+tatami.presentation.row2.2=Fonctionne sur tout support : mobile, tablette, ou PC "classique", l'application s'adapte automatiquement à l'écran
+tatami.presentation.row2.3=Restez connectés à votre entreprise où que vous soyez
+
+tatami.presentation.row3.title=S'installe facilement et s'intègre sans problème dans votre SI
+tatami.presentation.row3.1=Application Java standard
+tatami.presentation.row3.2=Contrairement aux solutions SaaS, vos données vous appartiennent entièrement !
+tatami.presentation.row3.3=S'intègre avec votre serveur LDAP
+tatami.presentation.row3.4=S'intègre avec Google Apps
+tatami.presentation.row3.5=Entièrement Open Source : simple à étendre ou à modifier en fonction de vos besoins
+tatami.presentation.row3.6=Peu gourmande en ressources et très performante
+tatami.presentation.row3.7=Participez au développement et proposez des corrections via notre page Github : 
+
+tatami.presentation.row4.title=Disponible également en version hébergée, entièrement gérée par Ippon Technologies
+tatami.presentation.row4.1=Si vous ne voulez pas installer Tatami chez vous, rien de plus simple que d'utiliser directement
+tatami.presentation.row4.2=Mode multi-entreprise sécurisé : chaque entreprise dispose de son propre espace
