Add job title, email and phone number to user profile

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -78,6 +78,9 @@ tatami.user.picture.legend=Pour mettre à jour votre photo, connectez-vous sur
 tatami.user.email=E-mail
 tatami.user.firstName=Prénom
 tatami.user.lastName=Nom
+tatami.user.jobTitle=Fonction
+tatami.user.email=Email
+tatami.user.phoneNumber=Numéro de téléphone
 tatami.user.follow=Suivre
 tatami.user.followed=Suivi
 tatami.badge.status=Statut
