--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -78,6 +78,9 @@ tatami.user.picture.legend=To update your picture, go to
 tatami.user.email=E-mail
 tatami.user.firstName=First name
 tatami.user.lastName=Last name
+tatami.user.jobTitle=Job title
+tatami.user.email=Email
+tatami.user.phoneNumber=Phone number
 tatami.user.follow=Follow
 tatami.user.followed=Followed
 tatami.badge.status=Status
