'Shared by' view

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -128,6 +128,8 @@ tatami.user.status.shared.by=Shared by
 tatami.timeline.refresh=Refresh
 tatami.timeline.next=More
 
+tatami.timeline.shares=Shared by
+
 tatami.user.status.confirm.delete=Are you sure you want to delete the status ?
 
 tatami.presentation.title=What is Tatami?
