--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -128,6 +128,8 @@ tatami.user.status.shared.by=Partagé par
 tatami.timeline.refresh=Rafraîchir
 tatami.timeline.next=Plus
 
+tatami.timeline.shares=Partagé par
+
 tatami.user.status.confirm.delete=Etes-vous certain de vouloir supprimer le status ?
 
 tatami.presentation.title=Qu'est-ce que Tatami ?
