Added warning "in development" message

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -6,6 +6,7 @@ tatami.ippon.twitter.follow=Follow @ippontech on Twitter
 tatami.title=Tatami
 tatami.profile=Profile
 tatami.home=Home
+tatami.beta.alert=Warning! Tatami is still in development mode. You can use the application for testing purposes, but it is very likely that your data will be erased and lost when we upgrade the system.
 tatami.menu.about=About
 tatami.menu.presentation=Presentation
 tatami.menu.tos=Terms of service
