--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -6,6 +6,7 @@ tatami.ippon.twitter.follow=Suivre @ippontech sur Twitter
 tatami.title=Tatami
 tatami.profile=Profil
 tatami.home=Accueil
+tatami.beta.alert=Attention ! Tatami est en cours de développement. Vous pouvez utiliser l'application pour la tester, mais il est probable que vos données seront effacées et perdues lorsque nous mettrons le système à jour.
 tatami.menu.about=A Propos
 tatami.menu.presentation=Présentation
 tatami.menu.tos=Conditions générales de vente
