--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -6,59 +6,59 @@ tatami.ippon.twitter.follow=Suivre @ippontech sur Twitter
 tatami.title=Tatami
 tatami.profile=Profil
 tatami.home=Accueil
-tatami.beta.alert=Attention ! Tatami est en cours de développement. Vous pouvez utiliser l'application pour la tester, mais il est probable que vos données seront effacées et perdues lorsque nous mettrons le système à jour.
+tatami.beta.alert=Attention ! Tatami est en cours de dï¿½veloppement. Vous pouvez utiliser l'application pour la tester, mais il est probable que vos donnï¿½es seront effacï¿½es et perdues lorsque nous mettrons le systï¿½me ï¿½ jour.
 tatami.menu.about=A Propos
-tatami.menu.presentation=Présentation
-tatami.menu.tos=Conditions générales de vente
+tatami.menu.presentation=Prï¿½sentation
+tatami.menu.tos=Conditions gï¿½nï¿½rales de vente
 tatami.menu.license=Licence du code source
 tatami.search.placeholder=Rechercher
 tatami.search.button=Rechercher
-tatami.logout=Déconnexion
+tatami.logout=Dï¿½connexion
 tatami.login=E-mail
 tatami.username=Nom d'utilisateur
 tatami.password=Mot de Passe
-tatami.404=Page non trouvée.
+tatami.404=Page non trouvï¿½e.
 tatami.500=Une erreur s'est produite.
 
 tatami.register.title=Vous n'avez pas (encore) de compte
-tatami.register.text.1=Pour créer votre compte Tatami, merci d'enregistrer votre adresse e-mail.
-tatami.register.text.2=Un message de confirmation sera envoyé à l'adresse e-mail que vous avez fournie.
-tatami.register.text.3=En fonction du nom de domaine de votre adresse e-mail, vous rejoindrez alors l'espace privé de votre entreprise. Par exemple, les utilisateurs avec une adresse de type email@ippon.fr rejoindront l'espace privé d'Ippon Technologies.
-tatami.register.text.4=Si vous êtes le premier employé de votre société à rejoindre Tatami, un espace privé pour votre société sera automatiquement créé.
+tatami.register.text.1=Pour crï¿½er votre compte Tatami, merci d'enregistrer votre adresse e-mail.
+tatami.register.text.2=Un message de confirmation sera envoyï¿½ ï¿½ l'adresse e-mail que vous avez fournie.
+tatami.register.text.3=En fonction du nom de domaine de votre adresse e-mail, vous rejoindrez alors l'espace privï¿½ de votre entreprise. Par exemple, les utilisateurs avec une adresse de type email@ippon.fr rejoindront l'espace privï¿½ d'Ippon Technologies.
+tatami.register.text.4=Si vous ï¿½tes le premier employï¿½ de votre sociï¿½tï¿½ ï¿½ rejoindre Tatami, un espace privï¿½ pour votre sociï¿½tï¿½ sera automatiquement crï¿½ï¿½.
 tatami.register=Enregistrement
-tatami.register.msg=Merci ! Un e-mail d'inscription vient de vous être envoyé.
-tatami.register.msg.error=Cette adresse e-mail est déjà utilisée par un utilisateur de Tatami.
+tatami.register.msg=Merci ! Un e-mail d'inscription vient de vous ï¿½tre envoyï¿½.
+tatami.register.msg.error=Cette adresse e-mail est dï¿½jï¿½ utilisï¿½e par un utilisateur de Tatami.
 tatami.register.validation.title=Validation de votre adresse e-mail
-tatami.register.validation.error=Votre adresse e-mail n'a pas pu être validée. Merci d'utiliser à nouveau notre formulaire d'enregistrement.
-tatami.register.validation.ok=Votre adresse e-mail a été validée. Vous allez recevoir votre mot de passe par e-mail.
-tatami.register.home=Aller à la page d'accueil
+tatami.register.validation.error=Votre adresse e-mail n'a pas pu ï¿½tre validï¿½e. Merci d'utiliser ï¿½ nouveau notre formulaire d'enregistrement.
+tatami.register.validation.ok=Votre adresse e-mail a ï¿½tï¿½ validï¿½e. Vous allez recevoir votre mot de passe par e-mail.
+tatami.register.home=Aller ï¿½ la page d'accueil
 
-tatami.lost.password.title=Vous avez oublié votre mot de passe ?
+tatami.lost.password.title=Vous avez oubliï¿½ votre mot de passe ?
 tatami.lost.password.button=Demander un nouveau mot de passe
-tatami.lost.password.msg=Un e-mail vous a été envoyé, vous expliquant comment réinitialiser votre mot de passe.
-tatami.lost.password.msg.error=Cette adresse e-mail n'est pas enregistrée dans Tatami.
+tatami.lost.password.msg=Un e-mail vous a ï¿½tï¿½ envoyï¿½, vous expliquant comment rï¿½initialiser votre mot de passe.
+tatami.lost.password.msg.error=Cette adresse e-mail n'est pas enregistrï¿½e dans Tatami.
 
-tatami.authentification=Vous avez déjà un compte
+tatami.authentification=Vous avez dï¿½jï¿½ un compte
 tatami.authentificate=Se Connecter
-tatami.authentification.error=Votre authentification a échoué ! Votre mot de passe est-il correct ?
+tatami.authentification.error=Votre authentification a ï¿½chouï¿½ ! Votre mot de passe est-il correct ?
 tatami.authentication.google.title=Authentification Google Apps
-tatami.authentication.google.desc.1=Cette fonctionnalité concerne les utilisateurs professionnels de Google Apps, et qui ont le nom de domaine de leur société associé à leur compte Google Apps. Pour plus d'informations sur Google Apps, suivez ce lien :
-tatami.authentication.google.desc.2=Que vous ayez déjà un compte Tatami ou non, vous pouvez vous connecter avec votre compte Google Apps.
-tatami.authentication.google.desc.3=Votre email sera demandé à Google et votre nom de domaine sera utilisé pour vous faire rejoindre l'espace privé correspondant.
+tatami.authentication.google.desc.1=Cette fonctionnalitï¿½ concerne les utilisateurs professionnels de Google Apps, et qui ont le nom de domaine de leur sociï¿½tï¿½ associï¿½ ï¿½ leur compte Google Apps. Pour plus d'informations sur Google Apps, suivez ce lien :
+tatami.authentication.google.desc.2=Que vous ayez dï¿½jï¿½ un compte Tatami ou non, vous pouvez vous connecter avec votre compte Google Apps.
+tatami.authentication.google.desc.3=Votre email sera demandï¿½ ï¿½ Google et votre nom de domaine sera utilisï¿½ pour vous faire rejoindre l'espace privï¿½ correspondant.
 tatami.authentication.google.submit=Connection avec Google Apps
-tatami.authentication.cgv=Conditions générales de vente
+tatami.authentication.cgv=Conditions gï¿½nï¿½rales de vente
 tatami.remember.password.time=Connexion automatique (30 jours)
 tatami.cg=Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 tatami.license.text=Licensed under the Apache License, Version 2.0 (the "License"); you may not use this application except in compliance with the License. You may obtain a copy of the License at
 tatami.license=Licence du code source
-tatami.presentation=Présentation
-tatami.presentation.text=Tatami est un réseau social de micro-blogging, utilisable en interne dans votre entreprise.
-tatami.presentation.moreinfo=Voir une présentation détaillée de Tatami 
+tatami.presentation=Prï¿½sentation
+tatami.presentation.text=Tatami est un rï¿½seau social de micro-blogging, utilisable en interne dans votre entreprise.
+tatami.presentation.moreinfo=Voir une prï¿½sentation dï¿½taillï¿½e de Tatami 
 tatami.status=Statut
-tatami.status.update=Mettre à jour votre statut
-tatami.status.update.to=Envoyer une mise à jour du statut
-tatami.status.reply=Répondre à ce statut
-tatami.status.reply.action=Répondre
+tatami.status.update=Mettre ï¿½ jour votre statut
+tatami.status.update.to=Envoyer une mise ï¿½ jour du statut
+tatami.status.reply=Rï¿½pondre ï¿½ ce statut
+tatami.status.reply.action=Rï¿½pondre
 tatami.user.favoritestatus=Favoris
 tatami.tags=Tags
 tatami.search=Recherche
@@ -66,29 +66,29 @@ tatami.status.stats=Statistiques
 tatami.stats.status.piechart=Statuts du jour
 tatami.stats.status.punchchart=Statuts de la semaine
 tatami.follow.title=Suivre un autre utilisateur
-tatami.follow.username=Tapez l'identifiant de l'utilisateur à suivre
+tatami.follow.username=Tapez l'identifiant de l'utilisateur ï¿½ suivre
 tatami.follow.action=Suivre
 tatami.follow.suggestions=Qui suivre ?
-tatami.follow.nobody=Personne à suivre aujourd'hui.
+tatami.follow.nobody=Personne ï¿½ suivre aujourd'hui.
 
 tatami.new.status=Nouveau
 tatami.timeline=Timeline
 
 tatami.user.picture=Photo
-tatami.user.picture.legend=Pour mettre à jour votre photo, connectez-vous sur
+tatami.user.picture.legend=Pour mettre ï¿½ jour votre photo, connectez-vous sur
 tatami.user.email=E-mail
-tatami.user.firstName=Prénom
+tatami.user.firstName=Prï¿½nom
 tatami.user.lastName=Nom
 tatami.user.jobTitle=Fonction
-tatami.user.phoneNumber=Numéro de téléphone
+tatami.user.phoneNumber=Numï¿½ro de tï¿½lï¿½phone
 tatami.user.follow=Suivre
 tatami.user.followed=Suivi
 tatami.badge.status=Statut
 tatami.badge.followed=Suivis
-tatami.badge.followers=Abonnés
+tatami.badge.followers=Abonnï¿½s
 tatami.user.undefined=Utilisateur inconnu.
 tatami.user.yourself=C'est vous !
-tatami.user.sendmessageto=Envoyez un message à
+tatami.user.sendmessageto=Envoyez un message ï¿½
 tatami.user.send=Envoi
 tatami.user.status=Statut
 
@@ -98,20 +98,20 @@ tatami.menu.profile=Profil
 tatami.menu.password=Mot de passe
 tatami.menu.enterprise=Entreprise
 
-tatami.form.previous=Précédent
+tatami.form.previous=Prï¿½cï¿½dent
 tatami.form.next=Suivant
 tatami.form.save=Sauvegarder
 tatami.form.cancel=Annuler
 
 tatami.account.update.title=Profil utilisateur
-tatami.account.update.legend=Mise à jour du profil
-tatami.user.update.success=Votre profil a été mis à jour.
+tatami.account.update.legend=Mise ï¿½ jour du profil
+tatami.user.update.success=Votre profil a ï¿½tï¿½ mis ï¿½ jour.
 tatami.user.update.error=Une erreur s'est produite !
 tatami.user.suppress=Destruction du compte utilisateur
-tatami.user.suppress.confirmation=Etes-vous sûr de vouloir détruire votre compte ?
-tatami.user.password.legend=Mise à jour de votre mot de passe
-tatami.user.password.ldap=Votre mot de passe est géré par LDAP, vous ne pouvez pas le modifier via Tatami.
-tatami.user.password.success=Votre mot de passe a été mis à jour.
+tatami.user.suppress.confirmation=Etes-vous sï¿½r de vouloir dï¿½truire votre compte ?
+tatami.user.password.legend=Mise ï¿½ jour de votre mot de passe
+tatami.user.password.ldap=Votre mot de passe est gï¿½rï¿½ par LDAP, vous ne pouvez pas le modifier via Tatami.
+tatami.user.password.success=Votre mot de passe a ï¿½tï¿½ mis ï¿½ jour.
 tatami.user.old.password=Ancien mot de passe
 tatami.user.old.password.error=Ancien mot de passe incorrect
 tatami.user.new.password=Nouveau mot de passe
@@ -120,48 +120,53 @@ tatami.user.new.password.confirmation=Confirmation du mot de passe
 
 tatami.user.profile.show=Profil de
 tatami.user.status.show=Voir
-tatami.user.status.details=Détails
-tatami.user.status.reply=Répondre
+tatami.user.status.details=Dï¿½tails
+tatami.user.status.reply=Rï¿½pondre
 tatami.user.status.share=Partager
 tatami.user.status.favorite=Favori
 tatami.user.status.delete=Supprimer
-tatami.user.status.replyto=En réponse à
-tatami.user.status.shared.by=Partagé par
+tatami.user.status.replyto=En rï¿½ponse ï¿½
+tatami.user.status.shared.by=Partagï¿½ par
 
-tatami.timeline.refresh=Rafraîchir
+tatami.timeline.refresh=Rafraï¿½chir
 tatami.timeline.next=Plus
 
-tatami.timeline.shares=Partagé par
+tatami.timeline.shares=Partagï¿½ par
 
 tatami.user.status.confirm.delete=Etes-vous certain de vouloir supprimer le status ?
 
 tatami.presentation.title=Qu'est-ce que Tatami ?
 
-tatami.presentation.row1.title=Une solution de micro-blogging privée, spécifique à votre entreprise
-tatami.presentation.row1.1=Mettez à jour votre statut pour que vos collègues soient informés
-tatami.presentation.row1.2=Abonnez-vous aux fils d'informations de vos collègues
-tatami.presentation.row1.3=Renvoyez les informations importantes aux personnes qui vous suivent
-tatami.presentation.row1.4=Discutez et répondez à vos collègues
-tatami.presentation.row1.5=Mettez en favori les informations essentielles
-tatami.presentation.row1.6=Recherchez l'information utile grâce à notre moteur de recherche intégré
-tatami.presentation.row1.7=Utilisez des hashtags pour découvrir des informations connexes
-tatami.presentation.row1.8=Allez sur les profils de vos collègues pour voir ce sur quoi ils travaillent
-tatami.presentation.row1.9=Versions Française et Anglaise disponibles, de nouvelles langues sont simples à ajouter
+tatami.presentation.row1.title=Une solution de micro-blogging privï¿½e, spï¿½cifique ï¿½ votre entreprise pour :
+tatami.presentation.row1.1=Mettre ï¿½ jour votre statut pour que vos collï¿½gues soient informï¿½s
+tatami.presentation.row1.2=S'abonner aux fils d'informations de vos collï¿½gues
+tatami.presentation.row1.3=Renvoyer les informations importantes aux personnes qui vous suivent
+tatami.presentation.row1.4=Discuter et rï¿½pondre ï¿½ vos collï¿½gues
+tatami.presentation.row1.5=Mettre en favori les informations essentielles
+tatami.presentation.row1.6=Rechercher l'information utile grï¿½ce ï¿½ notre moteur de recherche intï¿½grï¿½
+tatami.presentation.row1.7=Utiliser des hashtags pour dï¿½couvrir des informations connexes
+tatami.presentation.row1.8=Aller sur les profils de vos collï¿½gues pour voir ce sur quoi ils travaillent
+tatami.presentation.row1.9=Versions Franï¿½aise et Anglaise disponibles, de nouvelles langues sont simples ï¿½ ajouter
 
 tatami.presentation.row2.title=Fonctionne partout !
-tatami.presentation.row2.1=Application Web entièrement dynamique (HTML5) : rien à installer, à part un navigateur Web moderne !
-tatami.presentation.row2.2=Fonctionne sur tout support : mobile, tablette, ou PC "classique", l'application s'adapte automatiquement à l'écran
-tatami.presentation.row2.3=Restez connectés à votre entreprise où que vous soyez
+tatami.presentation.row2.1=Application Web entiï¿½rement dynamique (HTML5) : rien ï¿½ installer, ï¿½ part un navigateur Web moderne !
+tatami.presentation.row2.2=Fonctionne sur tout support : mobile, tablette, ou PC "classique", l'application s'adapte automatiquement ï¿½ l'ï¿½cran
+tatami.presentation.row2.3=Restez connectï¿½s ï¿½ votre rÃ©seau professionnel oÃ¹ que vous soyez
 
-tatami.presentation.row3.title=S'installe facilement et s'intègre sans problème dans votre SI
+tatami.presentation.row3.title=S'installe facilement et s'intï¿½gre sans problï¿½me dans votre SI
 tatami.presentation.row3.1=Application Java standard
-tatami.presentation.row3.2=Contrairement aux solutions SaaS, vos données vous appartiennent entièrement !
-tatami.presentation.row3.3=S'intègre avec votre serveur LDAP
-tatami.presentation.row3.4=S'intègre avec Google Apps
-tatami.presentation.row3.5=Entièrement Open Source : simple à étendre ou à modifier en fonction de vos besoins
-tatami.presentation.row3.6=Peu gourmande en ressources et très performante
-tatami.presentation.row3.7=Participez au développement et proposez des corrections via notre page Github : 
+tatami.presentation.row3.2=Contrairement aux solutions SaaS, vos donnï¿½es vous appartiennent entiï¿½rement !
+tatami.presentation.row3.3=S'intï¿½gre avec votre serveur LDAP
+tatami.presentation.row3.4=S'intï¿½gre avec Google Apps
+tatami.presentation.row3.5=Entiï¿½rement Open Source : simple ï¿½ ï¿½tendre ou ï¿½ modifier en fonction de vos besoins
+tatami.presentation.row3.6=Peu gourmande en ressources et trï¿½s performante
+tatami.presentation.row3.7=Participez au dï¿½veloppement et proposez des corrections via notre page Github : 
 
-tatami.presentation.row4.title=Disponible également en version hébergée, entièrement gérée par Ippon Technologies
+tatami.presentation.row4.title=Disponible ï¿½galement en version hï¿½bergï¿½e, entiï¿½rement gï¿½rï¿½e par Ippon Technologies
 tatami.presentation.row4.1=Si vous ne voulez pas installer Tatami chez vous, rien de plus simple que d'utiliser directement
-tatami.presentation.row4.2=Mode multi-entreprise sécurisé : chaque entreprise dispose de son propre espace
+tatami.presentation.row4.2=Mode multi-entreprise sï¿½curisï¿½ : chaque entreprise dispose de son propre espace
+
+tatami.presentation.row5.title=Une question?
+tatami.presentation.row5.1=Notre Ã©quipe commerciale reste Ã  votre Ã©coute  - 01 46 12 48 48
+
+
