Traduction anglaise et correction de texte

--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -46,14 +46,14 @@ tatami.authentication.google.desc.1=This feature is for enterprise Google Apps u
 tatami.authentication.google.desc.2=Whether or not you already have a Tatami account, you can sign in with your Google Apps account.
 tatami.authentication.google.desc.3=Your email will be asked to Google and your domain name will be used to make you join the corresponding private space.
 tatami.authentication.google.submit=Authentication with Google Apps
-tatami.authentication.cgv=Terms of Service 
+tatami.authentication.cgv=Terms of Service
 tatami.remember.password.time=Automatic connection (30 days)
 tatami.cg=Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 tatami.license.text=Licensed under the Apache License, Version 2.0 (the "License"); you may not use this application except in compliance with the License. You may obtain a copy of the License at
 tatami.license=Source Code License
 tatami.presentation=Presentation
 tatami.presentation.text=Tatami is an enterprise micro-blogging platform.
-tatami.presentation.moreinfo=See a detailled presentation of Tatami 
+tatami.presentation.moreinfo=See a detailled presentation of Tatami
 tatami.status=Status
 tatami.status.update=Update your status
 tatami.status.update.to=Send a status update
@@ -160,9 +160,11 @@ tatami.presentation.row3.3=Integrates with your LDAP directory
 tatami.presentation.row3.4=Integrates with Google Apps
 tatami.presentation.row3.5=Fully Open Source : easy to extend or modify according to your needs
 tatami.presentation.row3.6=High performance, even on small hardware
-tatami.presentation.row3.7=Join the project and submit patches on our Github page: 
+tatami.presentation.row3.7=Join the project and submit patches on our Github page:
 
 tatami.presentation.row4.title=Also available in SaaS mode, fully managed by Ippon Technologies
 tatami.presentation.row4.1=If you do not want to install Tatami in your company, it's easy to use directly
 tatami.presentation.row4.2=Secured multi-enterprise mode : every company has its own private space
 
+tatami.presentation.row5.title=Need more information on our product?
+tatami.presentation.row5.1=Our sales team is looking forward to hearing from you! Call us at +33 01 46 12 48 48
