--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -138,11 +138,11 @@ tatami.user.status.confirm.delete=Etes-vous certain de vouloir supprimer le stat
 tatami.presentation.title=Qu'est-ce que Tatami ?
 
 tatami.presentation.row1.title=Une solution de micro-blogging privée, spécifique à votre entreprise:
-tatami.presentation.row1.1=Mettez à jour votre statut pour que vos collègues soient informés
+tatami.presentation.row1.1=Mettre à jour votre statut pour que vos collègues soient informés
 tatami.presentation.row1.2=S'abonner aux fils d'informations de vos collègues
 tatami.presentation.row1.3=Renvoyer les informations importantes aux personnes qui vous suivent
 tatami.presentation.row1.4=Discuter et répondre à vos collègues
-tatami.presentation.row1.5=Metter en favori les informations essentielles
+tatami.presentation.row1.5=Mettre en favori les informations essentielles
 tatami.presentation.row1.6=Rechercher l'information utile grâce à notre moteur de recherche intégré
 tatami.presentation.row1.7=Utiliser des hashtags pour découvrir des informations connexes
 tatami.presentation.row1.8=Aller sur les profils de vos collègues pour voir ce sur quoi ils travaillent
@@ -151,7 +151,7 @@ tatami.presentation.row1.9=Versions Française et Anglaise disponibles, de nouvel
 tatami.presentation.row2.title=Fonctionne partout !
 tatami.presentation.row2.1=Application Web entièrement dynamique (HTML5) : rien à installer, à part un navigateur Web moderne !
 tatami.presentation.row2.2=Fonctionne sur tout support : mobile, tablette, ou PC "classique", l'application s'adapte automatiquement à l'écran
-tatami.presentation.row2.3=Restez connectés à votre entreprise où que vous soyez
+tatami.presentation.row2.3=Rester connectés à votre entreprise où que vous soyez
 
 tatami.presentation.row3.title=S'installe facilement et s'intègre sans problème dans votre SI
 tatami.presentation.row3.1=Application Java standard
@@ -167,4 +167,4 @@ tatami.presentation.row4.1=Si vous ne voulez pas installer Tatami chez vous, rie
 tatami.presentation.row4.2=Mode multi-entreprise sécurisé : chaque entreprise dispose de son propre espace
 
 tatami.presentation.row5.title=Une question?
-tatami.presentation.row5.1=Notre équipe commerciale reste à votre écoute <a href:"mailto:commercial@ippon.fr">commercial@ippon.fr</a> - 01 46 12 48 48
+tatami.presentation.row5.1=Notre équipe commerciale reste à votre écoute - 01 46 12 48 48
