--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -166,5 +166,5 @@ tatami.presentation.row4.title=Disponible également en version hébergée, entière
 tatami.presentation.row4.1=Si vous ne voulez pas installer Tatami chez vous, rien de plus simple que d'utiliser directement
 tatami.presentation.row4.2=Mode multi-entreprise sécurisé : chaque entreprise dispose de son propre espace
 
-tatami.presentation.row5.title=Une question?
-tatami.presentation.row5.1=Notre équipe commerciale reste à votre écoute - 01 46 12 48 48
+tatami.presentation.row5.title=Une question ?
+tatami.presentation.row5.1=Notre équipe commerciale reste à votre écoute - Téléphonez-nous au 01 46 12 48 48 ou envoyez-nous un e-mail à
