--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -167,4 +167,4 @@ tatami.presentation.row4.1=If you do not want to install Tatami in your company,
 tatami.presentation.row4.2=Secured multi-enterprise mode : every company has its own private space
 
 tatami.presentation.row5.title=Need more information on our product?
-tatami.presentation.row5.1=Our sales team is looking forward to hearing from you! Call us at +33 01 46 12 48 48
+tatami.presentation.row5.1=Our sales team is looking forward to hearing from you! Call us at +33 01 46 12 48 48 or e-mail us at
