--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -150,7 +150,7 @@ tatami.presentation.row1.9=English and French versions available, adding other l
 
 tatami.presentation.row2.title=Works on all devices !
 tatami.presentation.row2.1=Dynamic Web application (HTML5) : nothing to install, excepted a modern browser!
-tatami.presentation.row2.2=Works on mobiles, tablets, or old-fashion computers : the application adapts itself automatically to your device's screen
+tatami.presentation.row2.2=Works on mobiles, tablets, or standard computers : the application adapts itself automatically to your device's screen
 tatami.presentation.row2.3=Stay connected with your enterprise wherever you are
 
 tatami.presentation.row3.title=Easy installation and integration with your company's IT infrastructure
@@ -158,13 +158,15 @@ tatami.presentation.row3.1=Standard Java application
 tatami.presentation.row3.2=Your data belongs to you, not to your SaaS vendor !
 tatami.presentation.row3.3=Integrates with your LDAP directory
 tatami.presentation.row3.4=Integrates with Google Apps
-tatami.presentation.row3.5=Fully Open Source : easy to extend or modify according to your needs
-tatami.presentation.row3.6=High performance, even on small hardware
-tatami.presentation.row3.7=Join the project and submit patches on our Github page:
+tatami.presentation.row3.5=Fully Open Source, with a business-friendly Apache 2 license 
+tatami.presentation.row3.6=Easy to extend or modify according to your needs
+tatami.presentation.row3.7=High performance (based on Apache Cassandra), even on small hardware
+tatami.presentation.row3.8=Join the project and submit patches on our Github page:
 
 tatami.presentation.row4.title=Also available in SaaS mode, fully managed by Ippon Technologies
 tatami.presentation.row4.1=If you do not want to install Tatami in your company, it's easy to use directly
 tatami.presentation.row4.2=Secured multi-enterprise mode : every company has its own private space
+tatami.presentation.row4.3=256 bits SSL cryptography : all data transfers are fully secured
 
 tatami.presentation.row5.title=Need more information on our product?
 tatami.presentation.row5.1=Our sales team is looking forward to hearing from you! Call us at +33 01 46 12 48 48 or e-mail us at
