--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -139,7 +139,7 @@ tatami.presentation.title=Qu'est-ce que Tatami ?
 
 tatami.presentation.row1.title=Une solution de micro-blogging privée, spécifique à votre entreprise:
 tatami.presentation.row1.1=Mettre à jour votre statut pour que vos collègues soient informés
-tatami.presentation.row1.2=S'abonner aux fils d'informations de vos collègues
+tatami.presentation.row1.2=S'abonner aux fils d'information de vos collègues
 tatami.presentation.row1.3=Renvoyer les informations importantes aux personnes qui vous suivent
 tatami.presentation.row1.4=Discuter et répondre à vos collègues
 tatami.presentation.row1.5=Mettre en favori les informations essentielles
@@ -151,20 +151,22 @@ tatami.presentation.row1.9=Versions Française et Anglaise disponibles, de nouvel
 tatami.presentation.row2.title=Fonctionne partout !
 tatami.presentation.row2.1=Application Web entièrement dynamique (HTML5) : rien à installer, à part un navigateur Web moderne !
 tatami.presentation.row2.2=Fonctionne sur tout support : mobile, tablette, ou PC "classique", l'application s'adapte automatiquement à l'écran
-tatami.presentation.row2.3=Rester connectés à votre entreprise où que vous soyez
+tatami.presentation.row2.3=Restez connectés à votre entreprise où que vous soyez
 
 tatami.presentation.row3.title=S'installe facilement et s'intègre sans problème dans votre SI
 tatami.presentation.row3.1=Application Java standard
 tatami.presentation.row3.2=Contrairement aux solutions SaaS, vos données vous appartiennent entièrement !
 tatami.presentation.row3.3=S'intègre avec votre serveur LDAP
 tatami.presentation.row3.4=S'intègre avec Google Apps
-tatami.presentation.row3.5=Entièrement Open Source : simple à étendre ou à modifier en fonction de vos besoins
-tatami.presentation.row3.6=Peu gourmande en ressources et très performante
-tatami.presentation.row3.7=Participez au développement et proposez des corrections via notre page Github :
+tatami.presentation.row3.5=Entièrement Open Source, sous license Apache 2 (dite "business friendly") 
+tatami.presentation.row3.6=Simple à étendre ou à modifier en fonction de vos besoins
+tatami.presentation.row3.7=Peu gourmande en ressources et très performante (basée sur Apache Cassandra)
+tatami.presentation.row3.8=Participez au développement et proposez des corrections via notre page Github :
 
 tatami.presentation.row4.title=Disponible également en version hébergée, entièrement gérée par Ippon Technologies
 tatami.presentation.row4.1=Si vous ne voulez pas installer Tatami chez vous, rien de plus simple que d'utiliser directement
 tatami.presentation.row4.2=Mode multi-entreprise sécurisé : chaque entreprise dispose de son propre espace
+tatami.presentation.row4.3=Cryptage SSL fort (256 bits) en standard : tous les transferts de données sont sécurisés 
 
 tatami.presentation.row5.title=Une question ?
 tatami.presentation.row5.1=Notre équipe commerciale reste à votre écoute - Téléphonez-nous au 01 46 12 48 48 ou envoyez-nous un e-mail à
