Count characters left in status

--- a/src/main/webapp/WEB-INF/messages/messages_fr.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_fr.properties
@@ -70,6 +70,7 @@ tatami.follow.suggestions=Qui suivre ?
 tatami.follow.nobody=Personne à suivre aujourd'hui.
 
 tatami.new.status=Nouveau
+tatami.status.characters.left=Caractères restant : 
 tatami.timeline=Timeline
 
 tatami.user.picture=Photo
