--- a/src/main/webapp/WEB-INF/messages/messages_en.properties
+++ b/src/main/webapp/WEB-INF/messages/messages_en.properties
@@ -70,6 +70,7 @@ tatami.follow.suggestions=Who to follow?
 tatami.follow.nobody=No new user to follow today.
 
 tatami.new.status=Update
+tatami.status.characters.left=Characters left: 
 tatami.timeline=Timeline
 
 tatami.user.picture=Picture
